--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -84,6 +84,7 @@
             padding: 0.75rem;
         }
     </style>
+	<meta name="google-site-verification" content="2tixrCNW1pWHuw1wvMrEOlzak0eYyRt4pyylNqQe6Mg" />
 </head>
 <body>
     <header>
