--- a/app/templates/personal/agregar_empleado.html
+++ b/app/templates/personal/agregar_empleado.html
@@ -91,10 +91,10 @@
     </div>
     <div class="mb-3">
         <label>Adscripción</label>
-        <select name="id_adscripcion" class="form-select" required>
+        <select name="id_unidad" class="form-select" required>
             <option value="">Selecciona una adscripción</option>
-            {% for a in adscripciones %}
-                <option value="{{ a.id_adscripcion }}">{{ a.nombre_adscripcion }}</option>
+            {% for a in unidadsalud %}
+                <option value="{{ a.id_unidad }}">{{ a.nombre }}</option>
             {% endfor %}
         </select>
     </div>
