--- a/app/templates/paciente/_form.html
+++ b/app/templates/paciente/_form.html
@@ -12,11 +12,11 @@
   <input type="date" name="fecha_nacimiento" class="form-control" value="{{ paciente.fecha_nacimiento if paciente and paciente.fecha_nacimiento else '' }}">
 </div>
 <div class="mb-3">
-  <label for="sexo" class="form-label">Sexo</label>
+  <label for="sexo" class="form-label" onchange="actualizarEmbarazo()">Sexo</label>
   <select name="sexo" class="form-control" id="sexo" required>
     <option value="M" {% if paciente and paciente.sexo == 'M' %}selected{% endif %}>Masculino</option>
     <option value="F" {% if paciente and paciente.sexo == 'F' %}selected{% endif %}>Femenino</option>
-    <option value="Otro" {% if paciente and paciente.sexo == 'Otro' %}selected{% endif %}>Otro</option>
+    
   </select>
 </div>
 <div class="mb-3">
@@ -47,20 +47,22 @@
     <option value="Sí" {% if paciente and paciente.esta_embarazada == 'Sí' %}selected{% endif %}>Sí</option>
   </select>
 </div>
-<div class="mb-3">
-  <label for="id_unidad">Unidad de Salud:</label>
-  <select name="id_unidad" id="id_unidad" class="form-select" required>
-    {% for unidad in unidades %}
-    <option value="{{ unidad.id_unidad }}">{{ unidad.nombre }} ({{ unidad.clues }})</option>
-    {% endfor %}
-  </select>
-</div>
-
 <!-- Tipo de Relación -->
 <div class="mb-3">
   <label for="tipo_relacion">Tipo de Relación:</label>
   <select name="tipo_relacion" id="tipo_relacion" class="form-select" required>
-    <option value="Universo">Universo</option>
-    <option value="Foráneo">Foráneo</option>
+    <option value="Universo" {% if relacion and relacion.tipo_relacion == 'Universo' %}selected{% endif %}>Universo</option>
+    <option value="Foráneo" {% if relacion and relacion.tipo_relacion == 'Foráneo' %}selected{% endif %}>Foráneo</option>
+  </select>
+</div>
+
+<div class="mb-3">
+  <label for="id_unidad">Unidad de Salud:</label>
+  <select name="id_unidad" id="id_unidad" class="form-select" required>
+    {% for unidad in unidades %}
+      <option value="{{ unidad.id_unidad }}" {% if relacion and relacion.id_unidad == unidad.id_unidad %}selected{% endif %}>
+        {{ unidad.nombre }} ({{ unidad.clues }})
+      </option>
+    {% endfor %}
   </select>
 </div>
